Migrating to Payara 6